--- a/Day_3 Dec_06/favicon.html
+++ b/Day_3 Dec_06/favicon.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Page</title>
-    <link rel="shortcut icon" href="../Minskole.jpg" type="image/x-icon">
+    <!-- <link rel="shortcut icon" href="../Minskole.jpg" type="image/x-icon"> -->
+    <link rel="shortcut icon" href="Minskole.jpg" type="image/x-icon">
     <!-- link elemet is self closing element -->
     <!-- Attribute: Providing additional information about an element.
                     Attributes mounting in only start/open tag. 
