--- a/Day_3 Dec_06/para.html
+++ b/Day_3 Dec_06/para.html
@@ -4,18 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Paragraph Doc</title>
+    <!-- <title>Paragraph Doc</title> -->
+    <title>My Paragraph</title>
+    <link rel="shortcut icon" href="../Minskole.jpg" type="image/x-icon">
 </head>
 
 <body>
-    <h3>Writting Paragraph :</h3>
+    <h3>Writting HTML Paragraph :</h3>
     <p>By using p element can write paragraph on page. we can generate dummy para of 50 words by using lorem50.</p>
     <p>In para we can formate text.</p>
     <p>Examples of HTML Text formatting Elements:</p>
-    <p>1. b Tag: <b></b>Text Bold</p>
+    <p>1. b Tag: <b>Text Bold</b></p>
     <p>2. strong Tag: <strong>Text Bold</strong></p>
     <p>3. mark Tag: <mark>Text Highlighted</mark></p>
     <p>4. u Tag: <u>underline word</u></p>
 </body>
 
 </html>
+
