--- a/Day_6 Dec_11/a.html
+++ b/Day_6 Dec_11/a.html
@@ -8,13 +8,12 @@
 </head>
 
 <body>
-    <h2><mark>a tag</mark>: Anchor element</h2>
+    <h2>a tag: Anchor element</h2>
     <p>a element inserting hyperlink on UI. <br>
         href: Hyper referance <br>
-        target= <strong>"_blank"</strong> : href url opens in the new tab <br>
-        target=<strong>"_self"</strong> : href url opens in the same tab (Default behaviour)
+        target="_blank" : href url opens in the new tab <br>
+        target="_self" : href url opens in the same tab (Default behaviour)
     </p>
-    <hr>
     <a href="https://minskole.in/">Click me1</a> <br>
 
     <a href="https://minskole.in/" target="_blank">Click me2</a> <br>
