--- a/Day_8 Dec_13/index.html
+++ b/Day_8 Dec_13/index.html
@@ -31,10 +31,10 @@
         color = cssVariable
         brown = cssValue
     </Pre>
-    <h3 style="color: brown;">my css</h3>
+    <hr>
+
+    <h3 style="color: brown;">My CSS Code Applied</h3>
     <!-- css selector -> h3) -->
-
-
 </body>
 
 </html>
