--- a/Day_8 Dec_13/script.html
+++ b/Day_8 Dec_13/script.html
@@ -7,9 +7,9 @@
     <title>HTML + JS</title>
     <!-- Can add js code in bothe head & body tag -->
     <!-- <script src="script.js"></script> -->
-    <!-- <script>
-        console.log("Hi, Head tag JS");    
-    </script> -->
+    <script>
+        console.log("Head tag JS code executed...");    
+    </script>
 </head>
 
 <body>
@@ -21,12 +21,12 @@
 
     -->
 
-    <p>We can add javaScript code inside the HTML</p>
-    <p>External javascript file:</p>
+    <p>We can add javaScript code inside the HTML.</p>
+    <!-- External javascript file: -->
     <script src="script.js"></script>
-    <p>Inside the script element, we can write js code</p>
+    <p>Inside the script element, we can write js code inside the HTML code.</p>
     <script>
-        console.log("Hi I am body tag JS");    
+        console.log("body tag JS code executed...");    
     </script>
     <P>
         <mark>Best Practice:</mark> JavaScript code requires HTML elements to be present for functional operations. To
