Day-27 Fix,Notes

--- a/Day_27 Jan_13/float.html
+++ b/Day_27 Jan_13/float.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Float</title>
     <style>
+        /* img element float on the layout */
         img {
             float: left;
             width: 200px;
@@ -13,7 +14,8 @@
             margin-right: 30px;
         }
 
-        #two::after {
+        /* #two not allowing any element of his left */
+        #two {
             clear: left;
         }
     </style>
@@ -28,6 +30,7 @@
         non quas soluta quo hic porro. Sint ad totam ex expedita, repudiandae molestias illum, sapiente nobis quae enim
         maxime soluta voluptatum illo? Alias, iusto neque praesentium ipsa assumenda aut similique vitae magni nesciunt
     </p>
+
     <p id="two">
         a animi iure. Deleniti, facere quaerat repellendus laudantium doloremque, harum hic debitis ut, asperiores neque
         nemo cum eaque possimus architecto porro vel? Placeat necessitatibus incidunt voluptatem ratione a, fugit nihil
@@ -35,7 +38,6 @@
         modi aut mollitia nulla ad temporibus dolor unde omnis. Animi, quasi nulla. Dolor nobis dolorum quisquam cum
         laudantium, asperiores facere, facilis aut placeat expedita hic veritatis sequi sint iste voluptatum ad numquam.
         Aut voluptatibus ratione vero id architecto quidem quae aspernatur obcaecati porro totam exercitationem
-
         eligendi, qui facilis ea nisi cum error. Minus, iusto! Placeat voluptas, enim facere officiis architecto rerum
         minima explicabo quae natus ipsum deserunt temporibus dolore harum suscipit corporis, ut in id nam? Facere,
         dolor velit error natus earum ipsa explicabo repudiandae placeat non eos quia provident quod! Lorem ipsum dolor
@@ -44,11 +46,6 @@
         corrupti iusto. Asperiores dolor ipsa ullam fuga accusantium blanditiis obcaecati reiciendis odio, quasi illum
         debitis rerum laudantium cupiditate!</p>
     </p>
-
-
-
-
-
 </body>
 
 </html>
