--- a/Day_11 Dec_18/BlockVsInline.html
+++ b/Day_11 Dec_18/BlockVsInline.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Block vs Inline</title>
     <style>
+        /* css selector grouping (,): selector1,selector2 */
         h1,
         i {
             background-color: aquamarine;
