--- a/Day_14 Dec_24/HTML Box.html
+++ b/Day_14 Dec_24/HTML Box.html
@@ -16,8 +16,10 @@
         }
 
         strong,
-        i {
-            border: 1px, solid;
+        li {
+            /* border: 1px, solid; */
+            margin: 20px 20px 20px 20px;
+            /* margin-bottom: 100px; */
         }
     </style>
 </head>
@@ -35,11 +37,13 @@
     <hr>
     <h1>HTML Content</h1>
     <hr>
-    <strong>Ele1</strong> <i>Ele2</i>
+    <strong>Ele1</strong> <i>Ele2</i> <br>
+    <strong>Ele3</strong>
     <hr>
     <mark>Element diamensions calculation</mark>
     <li>Final element width = left border + left padding + width + right padding + right border</li>
-    <li>Final element height = top border + top padding + height + bottom padding + bottom border</li>
+    <li style="margin-top: 40px;">Final element height = top border + top padding + height + bottom padding + bottom
+        border</li>
 </body>
 
 </html>
