--- a/Day_24 Jan_8/display.html
+++ b/Day_24 Jan_8/display.html
@@ -16,13 +16,13 @@
             display: inline;
         }
 
-        span:nth-child(1) {
+        #span1 {
             display: inline-block;
             width: 90px;
             height: 90px;
         }
 
-        span:nth-child(2) {
+        #span2 {
             display: none;
         }
     </style>
@@ -30,9 +30,9 @@
 
 <body>
     <h1>heading element</h1>
-    <span>span element1</span>
+    <span id="span1">span element1</span>
     <div>div element</div>
-    <span>span element2</span>
+    <span id="span2">span element2</span>
 </body>
 
 </html>
