--- a/Day_25 Jan_9/Text style.html
+++ b/Day_25 Jan_9/Text style.html
@@ -5,9 +5,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>text font</title>
+    <style>
+        body {
+            border: 2px solid rgb(0, 0, 0);
+            border-collapse: collapse;
+        }
+
+        h2 {
+            color: brown;
+            border: 1px solid #000;
+            background-color: lightyellow;
+            text-align: center;
+        }
+    </style>
+
 </head>
 
 <body>
+    <h2>Text Styling</h2>
     <div>
         <dt><mark>1. font-style: </mark></dt>
         <dd>
@@ -95,14 +110,14 @@
         </dd>
     </div>
     <div>
-        <dt><mark>10. letter-spacing: </mark></dt>
+        <dt><mark>10. letter-spacing: 10px </mark></dt>
         <dd>
             <p style="letter-spacing: 10px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, a
                 mollitia quibusdam sapiente saepe libero illo vitae culpa.</p>
         </dd>
     </div>
     <div>
-        <dt><mark>11. word-spacing: </mark></dt>
+        <dt><mark>11. word-spacing: 15px </mark></dt>
         <dd>
             <p style="word-spacing: 15px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, a
                 mollitia quibusdam sapiente saepe libero illo vitae culpa.</p>
