--- a/Day_23 Jan_7/background.html
+++ b/Day_23 Jan_7/background.html
@@ -24,9 +24,9 @@
             height: 800px;
             background-color: aquamarine;
             background-image: url(../Minskole.jpg);
-            /* background-repeat: no-repeat;
+            background-repeat: no-repeat;
             background-position: center;
-            background-size: cover; */
+            background-size: cover;
         }
     </style>
 </head>
